--- a/text.css
+++ b/text.css
@@ -1,13 +1,17 @@
 @charset "utf-8";
 
 /*
-   New Perspectives on HTML5 and CSS3, 8th Edition
-   Tutorial 4
-   Coding Challenge 1
+   Make sure to add something to the css
+  Hi mr professor how was your day?
+   Coding Final Challenge
 
-   Author: 
-   Date:   
+   Author: Tobius Tucker
+   Date:   4/27/2025
    
-   Filename: code4-1.css
+   Filename: TLTuck5.github.io
 
 */
+
+ul {
+  font-style 
+}
