--- a/text.css
+++ b/text.css
@@ -15,6 +15,9 @@ h1{
 border: 2px, dotted, red;
    background-color: gray;
 }
+p {
+font-size: 20px;
+}
 ul {
 text-size: 28px;
 text-shadow: black, -4px -3px 5px
