--- a/text.css
+++ b/text.css
@@ -13,12 +13,21 @@
 */
 h1{
 border: 2px, dotted, red;
-   background-color: gray;
+   background-color: ivory;
 }
 p {
-font-size: 20px;
+font-size: 28px;
 }
-ul {
+ul, a {
 text-size: 28px;
 text-shadow: black, -4px -3px 5px
+}
+img{
+margin: auto;
+display: block;
+border: 4px, groove, grey;
+}
+
+body {
+background-color: gray
 }
