--- a/text.css
+++ b/text.css
@@ -31,6 +31,6 @@ display: block;
 border: 12px, groove, grey;
 }
 
-body {
-linear-gradient(300deg, red, grey, ivory)
+#grad {
+background-image: linear-gradient(300deg, red, grey, ivory);
 }
