--- a/text.css
+++ b/text.css
@@ -16,21 +16,35 @@ border: 4px, dotted, red;
    background-color: ivory;
 text-align: center;
 }
+
 p {
 font-size: 28px;
 text-align: center;
 color: ivory
 }
+
 ul, a {
 font-size: 28px;
 text-shadow: black, -4px -3px 5px
 }
+
+a:link {
+color: green
+}
+
+a:visited{
+   color: red
+}
+a:hover{
+color: yellow
+}
+
 img{
 margin: auto;
 display: block;
 border: 12px, groove, grey;
 }
 
-#grad {
+body {
 background-image: linear-gradient(300deg, red, grey, ivory);
 }
